# notion_bot

./: .env.example  .gitignore  README  README.md  pyproject.toml
src/notion_bot/: __init__.py  main.py
src/notion_bot/config/: credentials.py  paths.py  prompt.py
src/notion_bot/ollama/: agent.py
src/notion_bot/telegram/: tools.py
src/notion_bot/tools/: crud.py
