[project]
name = "notion-bot"
version = "0.1.0"
authors = [
    { name = "Angel Merino", email = "acedeno00@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "pydantic>=2.12.5",
    "requests>=2.32.5",
]

[project.scripts]
notion-bot = "notion_bot:main"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"
